@@ -33,6 +33,7 @@
 26. Use white icon, in toolbar, for update when using coloured toolbars.
 27. Add 'Back (coloured toolbars)' to theme options.
 28. Larger play/pause button.
+29. Map more LMS icons to material icons.
 
 1.4.5
 -----
